[package]
name = "wayland-raw-protocol-bindings"
version = "0.1.1"
edition = "2018"
build = "build.rs"
authors = [ "zlnpgtdtfezf <zlnpgtdtfezf@gmail.com>" ]
license = "MIT"
description = "c like wayland bindings"
homepage = "https://github.com/zlnpgtdtfezf/wayland-raw-protocol-bindings"
documentation = "https://docs.rs/wayland-raw-protocol-bindings"
repository = "https://github.com/zlnpgtdtfezf/wayland-raw-protocol-bindings"

[dependencies]
wayland-sys = { version = "0.23", features = ["dlopen", "client", "server", "cursor", "egl" ] }
libc = "0.2"
bitflags = "1.0"

[build-dependencies]
proc-macro2 = "0.4.24"
quote = "0.6.10"
xml-rs = ">=0.7, <0.9"
